--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/Fuzzing.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/Fuzzing.yaml
@@ -1,3 +1,9 @@
-id: fuzzing
+id: FUZZING
 info:
-apiSelectionFilters:
+  name: FUZZING
+  description: ""
+  details: ""
+  impact: ""
+  subCategory: FUZZING
+  confidence: ""
+api_selection_filters:
