--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/AddMethodInParameter.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/AddMethodInParameter.yaml
@@ -1,20 +1,30 @@
-id: change-method
+id: ADD_METHOD_IN_PARAMETER
 info:
-  message: >
-            "Attacker can access resources of any user by replacing method of the endpoint (eg: changemethod from get to post). This way attacker can get access to unauthorized endpoints.",
-            "The endpoint appears to be vulnerable to broken function level authorization attack. The original request was replayed with the addition of request parameter " +
-            "(for example: {method = GET} was added to change it to GET method) in query params." +
-            " The application responded with 2XX success codes and the response body match was less than <b>{{percentageMatch}}%</b>.<br><br>" +
-            "<b>Background:</b> Some web frameworks provide a way to override the actual HTTP method in the request by emulating the missing HTTP verbs passing some custom parameter in query params. " +
-            "The main purpose of this is to circumvent some middleware (e.g. proxy, firewall) limitation where methods allowed usually do not encompass verbs such as PUT or DELETE."
-  category: Broken Function Level Authorization (BFLA)
+  name: "BFLA by HTTP verb tunneling by adding method param"
+  description: "Attacker can access resources of any user by replacing method of the endpoint (eg: changemethod from get to post). This way attacker can get access to unauthorized endpoints."
+  details: >
+            "The endpoint appears to be vulnerable to broken object level authorization attack. The original request " +
+            "was replayed with attacker's auth token. The server responded with 2XX success codes and greater" +
+            " than <b>{{percentageMatch}}%</b> of the response body matched with original response body. Also, the endpoint had atleast one private " +
+            "resources in request payload.<br><br>" +
+            "<b>Background:</b> Object level authorization is an access control mechanism that is usually implemented at the code level to" +
+            " validate that one user can only access objects that they should have access to."
+  impact: "An attacker can perform sensitive actions (e.g., creation, modification, or erasure) that they should not have access to by simply overriding the HTTP method by adding parameter method in query params."
+  category:
+    name: BFLA
+    shortName: Broken Function Level Authorization
+    displayName: Broken Function Level Authorization (BFLA)
   subCategory: ADD_METHOD_IN_PARAMETER
   severity: HIGH
-  tags: Business logic, OWASP top 10, HackerOne top 10
+  tags: 
+    - Business logic
+    - OWASP top 10
+    - HackerOne top 10
+  confidence: HIGH
   references:
     - "https://owasp.org/www-project-web-security-testing-guide/v42/4-Web_Application_Security_Testing/02-Configuration_and_Deployment_Management_Testing/06-Test_HTTP_Methods"
     - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa5-broken-function-level-authorization.md"
     - "https://cwe.mitre.org/data/definitions/285.html"
     - "https://fanoframework.github.io/security/http-verb-tunnelling/#:~:text=What%20is%20it%3F,allows%20GET%20and%20POST%20request.&text=Alternatively%2C%20you%20can%20also%20use,body%20parameter%20_method%20like%20so."
   author: Akto
-apiSelectionFilters:
+api_selection_filters:
