--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/OpenRedirect.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/OpenRedirect.yaml
@@ -1,25 +1,39 @@
-id: open-redirect
+id: OPEN_REDIRECT
 info:
-  message: > 
-            "An attacker can construct a URL within the application that causes a redirection to an arbitrary external domain.",
+  name: "Open redirect"
+  description: "An attacker can construct a URL within the application that causes a redirection to an arbitrary external domain."
+  details: > 
             "Open redirection vulnerabilities arise when an application incorporates user-controllable data into the target of a redirection in an unsafe way." +
-            "The ability to use an authentic application URL, targeting the correct domain and with a valid SSL certificate (if SSL is used), lends credibility to the phishing attack because many users, even if they verify these features, will not notice the subsequent redirection to a different domain",
-            "This behavior can be leveraged to facilitate phishing attacks against users of the application."
-  category: Security Misconfiguration (SM)
+            "The ability to use an authentic application URL, targeting the correct domain and with a valid SSL certificate (if SSL is used), lends credibility to the phishing attack because many users, even if they verify these features, will not notice the subsequent redirection to a different domain"
+  impact: "This behavior can be leveraged to facilitate phishing attacks against users of the application."
+  category:
+    name: SM
+    shortName: Misconfiguration
+    displayName: Security Misconfiguration (SM)
   subCategory: OPEN_REDIRECT
   severity: HIGH
-  confidence: LOW
-  tags: Business logic, OWASP top 10, HackerOne top 10
+  confidence: HIGH
+  tags: 
+    - Business logic
+    - OWASP top 10
+    - HackerOne top 10
   references:
     - "https://portswigger.net/kb/issues/00500100_open-redirection-reflected"
   author: Akto
-apiSelectionFilters:
+api_selection_filters:
+  response_code:
+    neq: 302
   or:
-    - request_header:
+    - request_payload:
         for_one:
-          - value: "${response_header.location}"
-    - request_body:
-        - value: "${response_header.z.b.*.location}"
-    - querparams:
-        - value: "${response_header.location}"
+          value:
+            eq: ${response_headers.location}
+    - query_param:
+        for_one:
+          value:
+            eq: ${response_headers.location}
+    - request_headers:
+        for_one:
+          value:
+            eq: ${response_headers.location}
 
