--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/BOLAByChangingAuthToken.yaml
@@ -3,13 +3,13 @@ info:
   name: REPLACE_AUTH_TOKEN
   description: "Attacker can access resources of any user by changing the auth token in request."
   details: >
-            "The endpoint appears to be vulnerable to broken object level authorization attack. The original request " +
-            "was replayed with attacker's auth token. The server responded with 2XX success codes and greater" +
-            " than <b>{{percentageMatch}}%</b> of the response body matched with original response body. Also, the endpoint had atleast one private " +
-            "resources in request payload.<br><br>" +
-            "<b>Background:</b> Object level authorization is an access control mechanism that is usually implemented at the code level to" +
-            " validate that one user can only access objects that they should have access to.",
-            "Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
+            "The endpoint appears to be vulnerable to broken object level authorization attack. The original request
+            was replayed with attacker's auth token. The server responded with 2XX success codes and greater
+            than <b>{{percentageMatch}}%</b> of the response body matched with original response body. Also, the endpoint had atleast one private
+            resources in request payload.<br>"
+            "<b>Background:</b> Object level authorization is an access control mechanism that is usually implemented at the code level to
+             validate that one user can only access objects that they should have access to.
+            Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
   impact: "Unauthorized access can result in data disclosure to unauthorized parties, data loss, or data manipulation. Unauthorized access to objects can also lead to full account takeover."
   category:
     name: BOLA
