--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/PageDos.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/PageDos.yaml
@@ -10,19 +10,40 @@ info:
     displayName: Lack of Resources & Rate Limiting (RL)
   subCategory: PAGINATION_MISCONFIGURATION
   severity: HIGH
-  confidence: HIGH
-  tags: 
+  tags:
     - Business logic
     - OWASP top 10
     - HackerOne top 10
   references:
     - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa4-lack-of-resources-and-rate-limiting.md#scenario-2"
-  author: Akto
+
 api_selection_filters:
   query_param:
     for_one:
       key:
         or:
-          - regex: limit
-          - regex: size          
-          - regex: page
+          - regex: .*limit.*
+          - regex: .*size.*
+          - regex: .*page.*
+        extract: limitKey
+      value:
+        extract: limitValue
+  response_payload:
+    length:
+      extract: original_length
+
+execute:
+  type: single
+  requests:
+    - req:
+        modify_query_param:
+          limitKey: ${limitValue}0
+
+validate:
+  response_code:
+    and:
+      gte: 200
+      lt: 300
+  response_payload:
+    length:
+      gt: ${original_length}
