--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/MassAssignmentCreateAdminUser.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/MassAssignmentCreateAdminUser.yaml
@@ -18,14 +18,12 @@ info:
     displayName: Mass Assignment (MA) 
   subCategory: MASS_ASSIGNMENT_CREATE_ADMIN_ROLE
   severity: HIGH
-  confidence: HIGH
-  tags: 
+  tags:
     - Business logic
     - OWASP top 10
     - HackerOne top 10
   references:
     - "https://github.com/OWASP/API-Security/blob/master/2019/en/src/0xa6-mass-assignment.md"
-  author: Akto
 api_selection_filters:
   response_code:
     gte: 200
@@ -48,5 +46,15 @@ api_selection_filters:
     for_one:
       key:
         contains_either:
-          - user
           - role
+
+execute:
+  type: single
+  requests:
+    - req:
+      - add_body_param:
+          role: admin
+
+validate:
+  response_payload:
+    contains_either: admin
