--- a/apps/dashboard/package.json
+++ b/apps/dashboard/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "@material-ui/core": "^4.12.4",
     "@mdi/font": "^5.6.55",
+    "@monaco-editor/loader": "^1.3.3",
     "@mui/material": "^5.9.2",
     "@mui/x-date-pickers": "^5.0.0",
     "are-you-es5": "^2.1.1",
@@ -38,6 +39,9 @@
     "file-saver": "^2.0.5",
     "highcharts": "^9.0.1",
     "highcharts-vue": "^1.0.4",
+    "monaco-editor": "^0.38.0",
+    "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-languageclient": "^5.0.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-flow-renderer": "^10.3.12",
