--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnAwsMetaEndpoint.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnAwsMetaEndpoint.yaml
@@ -32,8 +32,22 @@ api_selection_filters:
     - request_headers:
         for_one:
           value:
-            - contains_either:
+            contains_either:
               - http
+          key:
+            extract: url_key
+    - request_payload:
+        for_one:
+          value:
+            contains_either:
+                - http
+          key:
+            extract: url_key
+    - query_param:
+        for_one:
+          value:
+            contains_either:
+                - http
           key:
             extract: url_key
 
@@ -42,11 +56,11 @@ execute:
   requests:
     - req:
       - modify_query_param:
-          url_key: https://evil.com
+          url_key: http://169.254.169.254/latest/meta-data/local-ipv4
       - modify_body_param:
-          url_key: https://evil.com
+          url_key: http://169.254.169.254/latest/meta-data/local-ipv4
       - modify_header:
-          url_key: https://evil.com
+          url_key: http://169.254.169.254/latest/meta-data/local-ipv4
 
 validate:
   response_payload:
