--- a/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnFiles.yaml
+++ b/libs/dao/src/main/java/com/akto/dao/test_editor/inbuilt_test_yaml_files/ssrf/SSRFOnFiles.yaml
@@ -14,7 +14,7 @@ info:
     name: SSRF
     shortName: Server Side Request Forgery
     displayName: Server Side Request Forgery (SSRF)
-  subCategory: SSRF_ON_EXTERNAL_ENDPOINT
+  subCategory: SSRF_ON_FILES
   severity: HIGH
   tags:
     - Business logic
@@ -61,4 +61,4 @@ execute:
 
 validate:
   response_payload:
-    eq: 200
+    regex: "root:.*:0:0:"
