Added changes related to kubernetes component

--- a/apps/dashboard/src/main/resources/cloud_formation_templates/kubernetes_mirroring.template
+++ b/apps/dashboard/src/main/resources/cloud_formation_templates/kubernetes_mirroring.template
@@ -918,10 +918,16 @@
   },
   "Outputs": {
     "AktoNLB": {
+      "Description": "The IP address of the AktoNLB",
       "Value": {
-        "Ref": "AktoNLB"
+        "Fn::GetAtt": [
+          "AktoNLB",
+          "DNSName"
+        ]
       },
-      "Description": "Arn of Akto Network Load Balancer"
+      "Export": {
+        "Name": "AktoNLBIP"
+      }
     }
   }
 }
